# dental_clinic

./: DEPLOY_TRIGGER.md  MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
dental_clinic/: hooks.py  install.py
dental_clinic/api/: __init__.py  ceo_dashboard.py  consolidation.py  items_dashboard.py  material_usage.py  nurse_acceptance.py  procurement_queue.py
dental_clinic/dental_clinic/: __init__.py
dental_clinic/dental_clinic/doctype/: __init__.py
dental_clinic/dental_clinic/page/items_dashboard/: __init__.py  items_dashboard.js  items_dashboard.json
dental_clinic/dental_clinic/page/material_usage/: __init__.py  material_usage.js  material_usage.json
dental_clinic/dental_clinic/page/nurse_acceptance/: __init__.py  nurse_acceptance.js  nurse_acceptance.json
dental_clinic/dental_clinic/page/procurement_queue/: __init__.py  procurement_queue.js  procurement_queue.json
dental_clinic/dental_clinic/report/doctor_stock_ledger/: __init__.py  doctor_stock_ledger.js  doctor_stock_ledger.json  doctor_stock_ledger.py
dental_clinic/events/: branch_master.py  material_request.py  purchase_order.py  stock_entry.py
dental_clinic/public/css/: dental_clinic.bundle.css
dental_clinic/public/js/: dental_clinic.bundle.js
dental_clinic/utils/: consolidation.py
