[project]
name = "dental_clinic"
authors = [
    { name = "Apollonia Health", email = "andrew.adel@apollonia-health.com"}
]
description = "Dental Clinic Inventory Management System for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
# No dev dependencies

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0"
erpnext = ">=16.0.0"
