[project]
name = "dental_clinic"
authors = [
    { name = "Apollonia Health", email = "andrew.adel@apollonia-health.com"}
]
description = "Dental Clinic Inventory Management System for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0-dev,<=17.0.0-dev"
erpnext = ">=16.0.0-dev,<=17.0.0-dev"
