[metadata]
name = dental_clinic
version = 0.0.1
description = Custom dental clinic inventory management for Drs. Nicolas & Asp
long_description = file: README.md
long_description_content_type = text/markdown
author = Apollonia Health
author_email = itmg@nicolasasp.ae
license = MIT

[options]
packages = find:
python_requires = >=3.10
